Improve mobile experience of modes page
Make tables scroll horizontally instead of the full page.

--- a/src/articles/musical-modes.mdx
+++ b/src/articles/musical-modes.mdx
@@ -31,6 +31,7 @@ This is a quick tool for finding notes of a specific scale. Read on for referenc
 T - Tone
 : `s` - semitone
 
+
 | _Mode_  | _Mode name_                 |  1  |  2  |  3  |  4  |  5  |  6  |  7  |
 | ------- | --------------------------- | --- | --- | --- | --- | --- | --- | --- |
 | **I**   | **Ionian (major)**          |  T  |  T  | `s` |  T  |  T  |  T  | `s` |
@@ -62,6 +63,8 @@ By "shifting" the order of the pattern, we end up with other scales. These scale
 
 Overview of what intervals are in scale.
 
+<div className="overflow-x-auto">
+
 | _Mode_  | _Mode name_                 |                  tonic                   |                    m2                    |                    M2                    |                    m3                    |                    M3                    |                perfect 4                 |             tritone (#4/♭5)              |                perfect 5                 |                    m6                    |                    M6                    |                    m7                    |                    M7                    |                  octave                  | _shortcut to help remember_ |
 | ------- | --------------------------- | ---------------------------------------- | ---------------------------------------- | ---------------------------------------- | ---------------------------------------- | ---------------------------------------- | ---------------------------------------- | ---------------------------------------- | ---------------------------------------- | ---------------------------------------- | ---------------------------------------- | ---------------------------------------- | ---------------------------------------- | ---------------------------------------- | --------------------------- |
 | **I**   | **Ionian (major)**          | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> | <FontAwesomeIcon icon={faCheckCircle} /> |           majors            |
@@ -71,6 +74,8 @@ Overview of what intervals are in scale.
 | **V**   | **Myxolydian**              | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> |         majors, m7          |
 | **VI**  | **Aeolian (natural minor)** | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> |         minors, M2          |
 | **VII** | **Locrian**                 | <FontAwesomeIcon icon={faCheckCircle} /> | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> |                                          | <FontAwesomeIcon icon={faCheckCircle} /> |         minors, ♭5          |
+
+</div>
 
 <div className="mb-8"></div>
 
@@ -82,6 +87,8 @@ M - major triad
 : m - minor triad
 : dim - diminished triad
 
+<div className="overflow-x-auto">
+
 | _Mode_  | _Mode name_                 |  1  |  2  |  3  |  4  |  5  |  6  |  7  |
 | ------- | --------------------------- | --- | --- | --- | --- | --- | --- | --- |
 | **I**   | **Ionian (major)**          |  M  |  m  |  m  |  M  |  M  |  m  | dim |
@@ -91,6 +98,8 @@ M - major triad
 | **V**   | **Myxolydian**              |  M  |  m  | dim |  M  |  m  |  m  |  M  |
 | **VI**  | **Aeolian (natural minor)** |  m  | dim |  M  |  m  |  m  |  M  |  M  |
 | **VII** | **Locrian**                 | dim |  M  |  m  |  m  |  M  |  M  |  m  |
+
+</div>
 
 Some observations:
 
