--- a/src/articles/behaviour-heatmap.mdx
+++ b/src/articles/behaviour-heatmap.mdx
@@ -7,6 +7,8 @@ faIcon: faMapLocationDot
 guid: 3463e599-aea0-4313-84c1-db22a4392834
 ---
 
+import { PullQuote, Card } from "../components"
+
 On a fairly regular basis, I want to be able to answer these questions for myself both inside and outside of work:
 
  - What kind of person do I want to become?
@@ -67,11 +69,14 @@ It acknowledges that you don't do everything all the time and helps you think ab
  - what does future-me do weekly?
  - what does future-me do monthly?
  - what does future-me do a few times per year?
- 
- ![mapping out future-me on a whiteboard](./images/behaviour-heatmap-future-me.png)
 
-> Note again that we're focusing on behaviour. We're keeping well-clear of we look like / feel / own / what others think of us. 
-These can be important, but they're not the goal of this exercise.
+<figure>
+![mapping out future-me on a whiteboard](./images/behaviour-heatmap-future-me.png)
+<figcaption>Example: behaviours of future-me</figcaption>
+</figure>
+
+<Card> **Note again:** we're focusing on _behaviour_. We're keeping well-clear of we look like / feel / own / what others think of us.  
+These can be important, but they're not the goal of this exercise. </Card>
 
 ## What are you doing now?
 
@@ -88,7 +93,10 @@ I suggest doing this by following the same steps you did for your future-you:
  - what am I currently doing monthly?
  - what am I currently doing a few times per year?
 
- ![mapping out future-me on a whiteboard](./images/behaviour-heatmap-today-me.png)
+<figure>
+![mapping current behaviours on a whiteboard](./images/behaviour-heatmap-today-me.png)
+<figcaption>Example: current behaviours</figcaption>
+</figure>
 
 **At this point we can do an initial evaluation.** Take a look at both sets of behaviours. 
 
@@ -97,7 +105,10 @@ Maybe something already stands out about future-you that you want to tweak, like
 After these adjustments, we should now have a clear picture of which of your current behaviours should eventually be dropped, and which of future-you's behaviours you should eventually pick up.
 Maybe you're already doing some of your future behaviours, but the frequency or scope you're doing them will need to change. I call this view a "heatmap". It gives me a sense of how far I am from achieving this future-vision of me.
 
- ![mapping out future-me on a whiteboard](./images/behaviour-heatmap.png)
+<figure>
+![mapping out future-me on a whiteboard](./images/behaviour-heatmap.png)
+<figcaption>Example: behaviour heatmap</figcaption>
+</figure>
 
 The idea here is that if we can progressively change our current behaviours into future behaviours then we will, for all practical purposes, "become" our ideal future version of ourselves.
 
@@ -120,7 +131,10 @@ e.g. it might not be possible to drop one of your daily responsibilities without
 So either pick another behaviour to change, or adapt your next goal to get you closer 
 e.g. discuss with your manager under which conditions you may be able to do less of your daily responsibilities.
 
+<figure>
 ![example trade-off where less responding to support asks is replaced with researching reducing support load](./images/behaviour-heatmap-tradeoff.png)
+<figcaption>Example: tradeoff</figcaption>
+</figure>
 
 ## Seek out wisdom and sponsorship
 
