Add periods to the end of descriptions

--- a/src/articles/behaviour-heatmap.mdx
+++ b/src/articles/behaviour-heatmap.mdx
@@ -1,6 +1,6 @@
 ---
 title: Behaviour heatmap
-description: My approach to personal progression
+description: My approach to personal progression.
 date: 2024-06-15
 lastEdit: 2024-06-15
 faIcon: faMapLocationDot
