--- a/src/articles/behaviours-for-serenity.mdx
+++ b/src/articles/behaviours-for-serenity.mdx
@@ -1,6 +1,6 @@
 ---
 title: Behaviours for serenity
-description: My take on what I found to be really good advice
+description: My take on what I found to be really good advice.
 date: 2024-06-10
 lastEdit: 2024-06-10
 faIcon: faMountain
