--- a/src/articles/personal-tenets.mdx
+++ b/src/articles/personal-tenets.mdx
@@ -1,6 +1,6 @@
 ---
 title: Personal tenets
-description: How I approach hard choices
+description: How I approach hard choices.
 date: 2021-08-31
 lastEdit: 2022-07-24
 faIcon: faMugHot
