--- a/src/articles/redux-unit-test-saga.mdx
+++ b/src/articles/redux-unit-test-saga.mdx
@@ -1,6 +1,6 @@
 ---
 title: Unit testing a redux-saga saga
-description: A method for unit testing a saga
+description: A method for unit testing a saga.
 date: 2022-01-29
 lastEdit: 2022-01-29
 faIcon: faAtom
